Adding `npm run lint`

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
-		"test": "node test/index.js",
+		"test": "npm run lint && node test/index.js && npm run coverage-quiet",
 		"coverage": "covert test/*.js",
-		"coverage-quiet": "covert test/*.js --quiet"
+		"coverage-quiet": "covert test/*.js --quiet",
+		"lint": "jscs *.js */*.js"
 	},
 	"repository": {
 		"type": "git",
@@ -30,7 +31,8 @@
 	"devDependencies": {
 		"is": "~0.3.0",
 		"tape": "~2.13.1",
-		"covert": "~0.4.0"
+		"covert": "~0.4.0",
+		"jscs": "~1.5.8"
 	},
 	"testling": {
 		"files": "test/index.js",
