--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"test": "npm run lint && node test/index.js && npm run coverage-quiet",
 		"coverage": "covert test/*.js",
 		"coverage-quiet": "covert test/*.js --quiet",
-		"lint": "GLOBIGNORE=dist/* ; jscs *.js */*.js",
+		"lint": "jscs *.js test/*.js",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
 		"prepublish": "npm run build"
 	},
