--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 		"test": "npm run lint && node test/index.js && npm run security",
 		"coverage": "covert test/*.js",
 		"coverage:quiet": "covert test/*.js --quiet",
-		"lint": "jscs *.js test/*.js",
+		"lint": "npm run jscs && npm run eslint",
+		"eslint": "eslint *.js test/*.js",
+		"jscs": "jscs *.js test/*.js",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
 		"prepublish": "npm run build",
 		"security": "nsp package"
@@ -38,7 +40,8 @@
 		"tape": "^4.0.0",
 		"covert": "^1.1.0",
 		"jscs": "^1.13.1",
-		"nsp": "^1.0.1"
+		"nsp": "^1.0.1",
+		"eslint": "^0.21.0"
 	},
 	"testling": {
 		"files": "test/index.js",
