Update `object-keys`, `define-properties`, `browserify`, `tape`, `eslint`

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,6 @@
 {
+	"root": true,
+
 	"env": {
 		"browser": false,
 		"node": true,
@@ -14,13 +16,16 @@
 			"objectsInArrays": false,
 			"arraysInArrays": false
 		}],
+		"arrow-parens": [2],
+		"arrow-spacing": [2, { "before": true, "after": true }],
 		"block-scoped-var": [0],
 		"brace-style": [2, "1tbs", { "allowSingleLine": true }],
+		"callback-return": [2, ["callback"]],
 		"camelcase": [2],
 		"comma-dangle": [2, "never"],
 		"comma-spacing": [2],
 		"comma-style": [2, "last"],
-		"complexity": [2, 20],
+		"complexity": [2, 16],
 		"computed-property-spacing": [2, "never"],
 		"consistent-return": [2],
 		"consistent-this": [0, "that"],
@@ -36,6 +41,7 @@
 		"global-strict": [0, "never"],
 		"guard-for-in": [0],
 		"handle-callback-err": [0],
+		"init-declarations": [0, "always"],
 		"key-spacing": [2, { "beforeColon": false, "afterColon": true }],
 		"linebreak-style": [2, "unix"],
 		"lines-around-comment": [2, {
@@ -51,7 +57,7 @@
 		"max-len": [0, 80, 4],
 		"max-nested-callbacks": [2, 2],
 		"max-params": [2, 2],
-		"max-statements": [2, 30],
+		"max-statements": [2, 29],
 		"new-parens": [2],
 		"new-cap": [2],
 		"newline-after-var": [0],
@@ -60,8 +66,10 @@
 		"no-bitwise": [0],
 		"no-caller": [2],
 		"no-catch-shadow": [2],
+		"no-class-assign": [2],
 		"no-cond-assign": [2],
 		"no-console": [2],
+		"no-const-assign": [2],
 		"no-constant-condition": [2],
 		"no-continue": [2],
 		"no-control-regex": [2],
@@ -81,9 +89,8 @@
 		"no-extend-native": [2],
 		"no-extra-bind": [2],
 		"no-extra-boolean-cast": [2],
-		"no-extra-parens": [0],
+		"no-extra-parens": [2],
 		"no-extra-semi": [2],
-		"no-extra-strict": [2],
 		"no-fallthrough": [2],
 		"no-floating-decimal": [2],
 		"no-func-assign": [2],
@@ -130,7 +137,6 @@
 		"no-sequences": [2],
 		"no-shadow": [2],
 		"no-shadow-restricted-names": [2],
-		"no-space-before-semi": [2],
 		"no-spaced-func": [2],
 		"no-sparse-arrays": [2],
 		"no-sync": [0],
@@ -148,10 +154,10 @@
 		"no-unused-expressions": [2],
 		"no-unused-vars": [1, { "vars": "all", "args": "after-used" }],
 		"no-use-before-define": [2],
+		"no-useless-call": [2],
 		"no-void": [0],
 		"no-warning-comments": [0, { "terms": ["todo", "fixme", "xxx"], "location": "start" }],
 		"no-with": [2],
-		"no-wrap-func": [2],
 		"object-curly-spacing": [2, "always"],
 		"object-shorthand": [2, "never"],
 		"one-var": [0],
@@ -159,8 +165,10 @@
 		"operator-linebreak": [2, "none"],
 		"padded-blocks": [0],
 		"prefer-const": [0],
+		"prefer-spread": [0],
 		"quote-props": [0],
 		"radix": [0],
+		"require-yield": [2],
 		"semi": [2],
 		"semi-spacing": [2, { "before": false, "after": true }],
 		"sort-vars": [0],
@@ -181,7 +189,7 @@
 		"space-unary-ops": [2, { "words": true, "nonwords": false }],
 		"spaced-comment": [2, "always"],
 		"spaced-line-comment": [0, "always"],
-		"strict": [0],
+		"strict": [2, "global"],
 		"use-isnan": [2],
 		"valid-jsdoc": [0],
 		"valid-typeof": [2],
