--- a/package.json
+++ b/package.json
@@ -32,17 +32,17 @@
 		"Underscore"
 	],
 	"dependencies": {
-		"object-keys": "^1.0.4",
-		"define-properties": "^1.0.2"
+		"object-keys": "^1.0.7",
+		"define-properties": "^1.1.0"
 	},
 	"devDependencies": {
-		"browserify": "^10.2.4",
+		"browserify": "^11.0.0",
 		"is": "^3.0.1",
-		"tape": "^4.0.0",
+		"tape": "^4.0.1",
 		"covert": "^1.1.0",
 		"jscs": "^1.13.1",
 		"nsp": "^1.0.3",
-		"eslint": "^0.24.0",
+		"eslint": "^1.0.0-rc-1",
 		"get-own-property-symbols": "^0.5.1"
 	},
 	"testling": {
