--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
 		"covert": "^1.1.0",
 		"jscs": "^1.13.1",
 		"nsp": "^1.0.3",
-		"eslint": "^1.0.0-rc-1",
+		"eslint": "^1.0.0-rc-2",
+		"@ljharb/eslint-config": "^1.0.3",
 		"get-own-property-symbols": "^0.5.1"
 	},
 	"testling": {
