--- a/package.json
+++ b/package.json
@@ -36,14 +36,14 @@
 		"define-properties": "^1.1.1"
 	},
 	"devDependencies": {
-		"browserify": "^11.0.0",
+		"browserify": "^11.0.1",
 		"is": "^3.0.1",
 		"tape": "^4.0.1",
 		"covert": "^1.1.0",
-		"jscs": "^1.13.1",
+		"jscs": "^2.0.0",
 		"nsp": "^1.0.3",
-		"eslint": "^1.0.0-rc-3",
-		"@ljharb/eslint-config": "^1.0.3",
+		"eslint": "^1.0.0",
+		"@ljharb/eslint-config": "^1.0.4",
 		"get-own-property-symbols": "^0.5.1"
 	},
 	"testling": {
