--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
-		"test": "npm run lint && node test/index.js && npm run test:symbol-shim && npm run security",
+		"test": "npm run lint && npm run tests-only && npm run security",
+		"tests-only": "node test/index.js && npm run test:symbol-shim",
 		"test:symbol-shim": "node test/symbolShim.js",
 		"coverage": "covert test/*.js",
 		"coverage:quiet": "covert test/*.js --quiet",
