--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
-		"test": "npm run lint && npm run tests-only && npm run security",
+		"test": "npm run lint && es-shim-api && npm run tests-only && npm run security",
 		"tests-only": "node test/index.js && npm run test:symbol-shim",
 		"test:symbol-shim": "node test/symbolShim.js",
 		"coverage": "covert test/*.js",
@@ -45,7 +45,8 @@
 		"nsp": "^1.0.3",
 		"eslint": "^1.1.0",
 		"@ljharb/eslint-config": "^1.0.4",
-		"get-own-property-symbols": "^0.5.1"
+		"get-own-property-symbols": "^0.5.1",
+		"@es-shims/api": "^1.0.0"
 	},
 	"testling": {
 		"files": "test/index.js",
