--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
 		"eslint": "^1.2.0",
 		"@ljharb/eslint-config": "^1.0.5",
 		"get-own-property-symbols": "^0.5.1",
-		"@es-shims/api": "^1.0.0"
+		"@es-shims/api": "^1.0.0",
+		"for-each": "^0.3.2"
 	},
 	"testling": {
 		"files": "test/index.js",
