--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
 		"complexity": [2, 16],
 		"id-length": [2, { "min": 1, "max": 30 }],
 		"max-statements": [2, 29],
+		"no-restricted-syntax": [2, "BreakStatement", "ContinueStatement", "DebuggerStatement", "LabeledStatement", "WithStatement"],
 		"no-unused-vars": [1, { "vars": "all", "args": "after-used" }]
 	}
 }
