--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,9 @@
 	"rules": {
 		"complexity": [2, 16],
 		"id-length": [2, { "min": 1, "max": 30 }],
-		"max-statements": [2, 29],
+		"max-nested-callbacks": [2, 3],
+		"max-statements": [2, 30],
+		"no-invalid-this": [1],
 		"no-magic-numbers": [1, { "ignore": [0] }],
 		"no-restricted-syntax": [2, "BreakStatement", "ContinueStatement", "DebuggerStatement", "LabeledStatement", "WithStatement"],
 		"no-unused-vars": [1, { "vars": "all", "args": "after-used" }]
