--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "npm run lint && es-shim-api && npm run tests-only && npm run security",
-		"tests-only": "node test/index.js && npm run test:shams",
+		"tests-only": "npm run test:implementation && npm run test:shim && npm run test:shams",
+		"test:shim": "node test/shimmed.js",
+		"test:implementation": "node test/index.js",
 		"test:shams": "npm run test:shams:getownpropertysymbols",
 		"test:shams:getownpropertysymbols": "node test/shams/get-own-property-symbols.js",
 		"coverage": "covert test/*.js",
