--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"tests-only": "npm run test:implementation && npm run test:shim && npm run test:shams",
 		"test:shim": "node test/shimmed.js",
 		"test:implementation": "node test/index.js",
-		"test:shams": "npm run test:shams:getownpropertysymbols",
+		"test:shams": "npm run test:shams:getownpropertysymbols && npm run test:shams:corejs",
+		"test:shams:corejs": "node test/shams/core-js.js",
 		"test:shams:getownpropertysymbols": "node test/shams/get-own-property-symbols.js",
 		"coverage": "covert test/*.js",
 		"coverage:quiet": "covert test/*.js --quiet",
@@ -53,6 +54,7 @@
 		"eslint": "^1.7.1",
 		"@ljharb/eslint-config": "^1.4.1",
 		"get-own-property-symbols": "^0.5.1",
+		"core-js": "^1.2.2",
 		"@es-shims/api": "^1.0.0",
 		"for-each": "^0.3.2"
 	},
