--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ node_js:
 before_install:
   - '[ "${TRAVIS_NODE_VERSION}" = "0.6" ] || npm install -g npm@1.4.28 && npm install -g npm'
 script:
-  - 'if [ "${TRAVIS_NODE_VERSION}" != "4.2" ]; then npm run tests-only ; else npm test ; fi'
+  - 'if [ "${TRAVIS_NODE_VERSION}" = "0.10" ]; then npm run tests-only && npm run test:shams ; elif [ "${TRAVIS_NODE_VERSION}" != "4.2" ]; then npm run tests-only ; else npm test ; fi'
 sudo: false
 matrix:
   fast_finish: true
