--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"jscs": "jscs *.js test/*.js",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
 		"prepublish": "npm run build",
-		"security": "requiresafe check"
+		"security": "nsp check"
 	},
 	"repository": {
 		"type": "git",
@@ -50,7 +50,7 @@
 		"tape": "^4.2.2",
 		"covert": "^1.1.0",
 		"jscs": "^2.5.0",
-		"requiresafe": "^2.3.1",
+		"nsp": "^2.0.0",
 		"eslint": "^1.8.0",
 		"@ljharb/eslint-config": "^1.5.0",
 		"get-own-property-symbols": "^0.7.0",
