--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
-		"test": "npm run lint && es-shim-api && npm run tests-only && npm run security",
-		"tests-only": "npm run test:implementation && npm run test:shim && npm run test:shams",
+		"test": "parallelshell 'npm run lint' 'es-shim-api' && npm run tests-only && npm run security",
+		"tests-only": "parallelshell 'npm run test:implementation' 'npm run test:shim' 'npm run test:shams'",
 		"test:shim": "node test/shimmed.js",
 		"test:implementation": "node test/index.js",
-		"test:shams": "npm run test:shams:getownpropertysymbols && npm run test:shams:corejs",
+		"test:shams": "parallelshell 'npm run test:shams:getownpropertysymbols' 'npm run test:shams:corejs'",
 		"test:shams:corejs": "node test/shams/core-js.js",
 		"test:shams:getownpropertysymbols": "node test/shams/get-own-property-symbols.js",
 		"coverage": "covert test/*.js",
 		"coverage:quiet": "covert test/*.js --quiet",
-		"lint": "npm run jscs && npm run eslint",
+		"lint": "parallelshell 'npm run jscs' 'npm run eslint'",
 		"eslint": "eslint *.js test/*.js",
 		"jscs": "jscs *.js test/*.js",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
@@ -56,7 +56,8 @@
 		"get-own-property-symbols": "^0.8.0",
 		"core-js": "^2.0.3",
 		"@es-shims/api": "^1.0.0",
-		"for-each": "^0.3.2"
+		"for-each": "^0.3.2",
+        "parallelshell": "^2.0.0"
 	},
 	"testling": {
 		"files": "test/index.js",
