--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 language: node_js
 node_js:
+  - "5.8"
+  - "5.7"
   - "5.6"
   - "5.5"
   - "5.4"
@@ -7,6 +9,7 @@ node_js:
   - "5.2"
   - "5.1"
   - "5.0"
+  - "4.4"
   - "4.3"
   - "4.2"
   - "4.1"
@@ -41,17 +44,20 @@ before_install:
   - 'if [ "${TRAVIS_NODE_VERSION}" != "0.9" ]; then case "$(npm --version)" in 1.*) npm install -g npm@1.4.28 ;; 2.*) npm install -g npm@2 ;; esac ; fi'
   - 'if [ "${TRAVIS_NODE_VERSION}" != "0.6" ] && [ "${TRAVIS_NODE_VERSION}" != "0.9" ]; then npm install -g npm; fi'
 script:
-  - 'if [ "${TRAVIS_NODE_VERSION}" = "0.10" ]; then npm run tests-only && npm run test:shams ; elif [ "${TRAVIS_NODE_VERSION}" != "4.2" ]; then npm run tests-only ; else npm test ; fi'
+  - 'if [ "${TRAVIS_NODE_VERSION}" = "0.10" ]; then npm run tests-only && npm run test:shams ; elif [ "${TRAVIS_NODE_VERSION}" != "4.4" ]; then npm run tests-only ; else npm test ; fi'
 sudo: false
 matrix:
   fast_finish: true
   allow_failures:
+    - node_js: "5.7"
+    - node_js: "5.6"
     - node_js: "5.5"
     - node_js: "5.4"
     - node_js: "5.3"
     - node_js: "5.2"
     - node_js: "5.1"
     - node_js: "5.0"
+    - node_js: "4.3"
     - node_js: "4.2"
     - node_js: "4.1"
     - node_js: "4.0"
