[Tests] run all the tasks `--silent`ly

--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
-		"test": "parallelshell 'npm run lint' 'es-shim-api' && npm run tests-only && npm run security",
-		"tests-only": "parallelshell 'npm run test:implementation' 'npm run test:shim' 'npm run test:shams'",
+		"test": "parallelshell 'npm run --silent lint' 'es-shim-api' && npm run --silent tests-only && npm run --silent security",
+		"tests-only": "parallelshell 'npm run --silent test:implementation' 'npm run --silent test:shim' 'npm run --silent test:shams'",
 		"test:native": "node test/native.js",
 		"test:shim": "node test/shimmed.js",
 		"test:implementation": "node test/index.js",
-		"test:shams": "parallelshell 'npm run test:shams:getownpropertysymbols' 'npm run test:shams:corejs'",
+		"test:shams": "parallelshell 'npm run --silent test:shams:getownpropertysymbols' 'npm run --silent test:shams:corejs'",
 		"test:shams:corejs": "node test/shams/core-js.js",
 		"test:shams:getownpropertysymbols": "node test/shams/get-own-property-symbols.js",
 		"coverage": "covert test/*.js",
 		"coverage:quiet": "covert test/*.js --quiet",
-		"lint": "parallelshell 'npm run jscs' 'npm run eslint'",
+		"lint": "parallelshell 'npm run --silent jscs' 'npm run --silent eslint'",
 		"eslint": "eslint *.js test/*.js",
 		"jscs": "jscs *.js test/*.js",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
-		"prepublish": "npm run build",
+		"prepublish": "npm run --silent build",
 		"security": "nsp check"
 	},
 	"repository": {
