--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
-		"pretest": "parallelshell 'npm run --silent lint' 'es-shim-api'",
+		"pretest": "npm run --silent lint && es-shim-api",
 		"test": "npm run --silent tests-only",
 		"posttest": "npm run --silent security",
-		"tests-only": "parallelshell 'npm run --silent test:implementation' 'npm run --silent test:shim' 'npm run --silent test:shams'",
+		"tests-only": "npm run --silent test:implementation && npm run --silent test:shim && npm run --silent test:shams",
 		"test:native": "node test/native.js",
 		"test:shim": "node test/shimmed.js",
 		"test:implementation": "node test/index.js",
-		"test:shams": "parallelshell 'npm run --silent test:shams:getownpropertysymbols' 'npm run --silent test:shams:corejs'",
+		"test:shams": "npm run --silent test:shams:getownpropertysymbols && npm run --silent test:shams:corejs",
 		"test:shams:corejs": "node test/shams/core-js.js",
 		"test:shams:getownpropertysymbols": "node test/shams/get-own-property-symbols.js",
 		"coverage": "covert test/*.js",
 		"coverage:quiet": "covert test/*.js --quiet",
-		"lint": "parallelshell 'npm run --silent jscs' 'npm run --silent eslint'",
+		"lint": "npm run --silent jscs && npm run --silent eslint",
 		"eslint": "eslint *.js test/*.js",
 		"jscs": "jscs *.js test/*.js",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
@@ -59,8 +59,7 @@
 		"get-own-property-symbols": "^0.9.2",
 		"core-js": "^2.2.2",
 		"@es-shims/api": "^1.2.0",
-		"for-each": "^0.3.2",
-		"parallelshell": "^2.0.0"
+		"for-each": "^0.3.2"
 	},
 	"testling": {
 		"files": "test/index.js",
