--- a/package.json
+++ b/package.json
@@ -9,13 +9,10 @@
 		"pretest": "npm run --silent lint && es-shim-api",
 		"test": "npm run --silent tests-only",
 		"posttest": "npm run --silent security",
-		"tests-only": "npm run --silent test:implementation && npm run --silent test:shim && npm run --silent test:shams",
+		"tests-only": "npm run --silent test:implementation && npm run --silent test:shim",
 		"test:native": "node test/native.js",
 		"test:shim": "node test/shimmed.js",
 		"test:implementation": "node test/index.js",
-		"test:shams": "npm run --silent test:shams:getownpropertysymbols && npm run --silent test:shams:corejs",
-		"test:shams:corejs": "node test/shams/core-js.js",
-		"test:shams:getownpropertysymbols": "node test/shams/get-own-property-symbols.js",
 		"coverage": "covert test/*.js",
 		"coverage:quiet": "covert test/*.js --quiet",
 		"lint": "npm run --silent jscs && npm run --silent eslint",
@@ -45,7 +42,8 @@
 	"dependencies": {
 		"function-bind": "^1.1.0",
 		"object-keys": "^1.0.11",
-		"define-properties": "^1.1.2"
+		"define-properties": "^1.1.2",
+		"has-symbols": "^1.0.0"
 	},
 	"devDependencies": {
 		"browserify": "^13.0.1",
@@ -56,8 +54,6 @@
 		"nsp": "^2.6.0",
 		"eslint": "^3.0.1",
 		"@ljharb/eslint-config": "^6.0.0",
-		"get-own-property-symbols": "^0.9.2",
-		"core-js": "^2.4.0",
 		"@es-shims/api": "^1.2.0",
 		"for-each": "^0.3.2"
 	},
