--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# gitignore
 npm-debug.log
 node_modules
 dist/
+
+# Only apps should have lockfiles
+npm-shrinkwrap.json
+package-lock.json
+yarn.lock
