--- a/package.json
+++ b/package.json
@@ -46,16 +46,16 @@
 		"has-symbols": "^1.0.0"
 	},
 	"devDependencies": {
+		"@es-shims/api": "^1.3.0",
+		"@ljharb/eslint-config": "^12.2.1",
 		"browserify": "^14.4.0",
-		"is": "^3.2.1",
-		"tape": "^4.6.3",
 		"covert": "^1.1.0",
+		"eslint": "^4.5.0",
+		"for-each": "^0.3.2",
+		"is": "^3.2.1",
 		"jscs": "^3.0.7",
-		"nsp": "^2.6.3",
-		"eslint": "^3.19.0",
-		"@ljharb/eslint-config": "^11.0.0",
-		"@es-shims/api": "^1.2.0",
-		"for-each": "^0.3.2"
+		"nsp": "^2.7.0",
+		"tape": "^4.8.0"
 	},
 	"testling": {
 		"files": "test/index.js",
@@ -79,4 +79,3 @@
 		"node": ">= 0.4"
 	}
 }
-
