--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 os:
  - linux
 node_js:
-  - "10.0"
+  - "10.3"
   - "9.11"
   - "8.11"
   - "7.10"
@@ -39,6 +39,12 @@ matrix:
       env: POSTTEST=true
     - node_js: "4"
       env: COVERAGE=true
+    - node_js: "10.2"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.1"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.0"
+      env: TEST=true ALLOW_FAILURE=true
     - node_js: "9.10"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "9.9"
