--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,12 @@ language: node_js
 os:
  - linux
 node_js:
-  - "10.3"
+  - "11.3"
+  - "10.14"
   - "9.11"
-  - "8.11"
+  - "8.14"
   - "7.10"
-  - "6.14"
+  - "6.15"
   - "5.12"
   - "4.9"
   - "iojs-v3.3"
@@ -39,6 +40,34 @@ matrix:
       env: POSTTEST=true
     - node_js: "4"
       env: COVERAGE=true
+    - node_js: "11.2"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "11.1"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "11.0"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.13"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.12"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.11"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.10"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.9"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.8"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.7"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.6"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.5"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.4"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.3"
+      env: TEST=true ALLOW_FAILURE=true
     - node_js: "10.2"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "10.1"
@@ -66,6 +95,12 @@ matrix:
     - node_js: "9.1"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "9.0"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "8.13"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "8.12"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "8.11"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "8.10"
       env: TEST=true ALLOW_FAILURE=true
@@ -108,6 +143,8 @@ matrix:
     - node_js: "7.1"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "7.0"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "6.14"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "6.13"
       env: TEST=true ALLOW_FAILURE=true
