[Tests] use `npm audit` instead of `nsp`

--- a/.travis.yml
+++ b/.travis.yml
@@ -256,4 +256,5 @@ matrix:
     - os: osx
     - env: TEST=true ALLOW_FAILURE=true
     - env: COVERAGE=true
+    - env: POSTTEST=true
     - node_js: "0.6"
