--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ language: node_js
 os:
  - linux
 node_js:
-  - "11.3"
-  - "10.14"
+  - "11.6"
+  - "10.15"
   - "9.11"
-  - "8.14"
+  - "8.15"
   - "7.10"
-  - "6.15"
+  - "6.16"
   - "5.12"
   - "4.9"
   - "iojs-v3.3"
@@ -40,11 +40,19 @@ matrix:
       env: POSTTEST=true
     - node_js: "4"
       env: COVERAGE=true
+    - node_js: "11.5"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "11.4"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "11.3"
+      env: TEST=true ALLOW_FAILURE=true
     - node_js: "11.2"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "11.1"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "11.0"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "10.14"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "10.13"
       env: TEST=true ALLOW_FAILURE=true
@@ -96,6 +104,8 @@ matrix:
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "9.0"
       env: TEST=true ALLOW_FAILURE=true
+    - node_js: "8.14"
+      env: TEST=true ALLOW_FAILURE=true
     - node_js: "8.13"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "8.12"
@@ -143,6 +153,8 @@ matrix:
     - node_js: "7.1"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "7.0"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "6.15"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "6.14"
       env: TEST=true ALLOW_FAILURE=true
@@ -248,7 +260,11 @@ matrix:
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "iojs-v1.0"
       env: TEST=true ALLOW_FAILURE=true
+    - node_js: "0.11"
+      env: TEST=true ALLOW_FAILURE=true
     - node_js: "0.9"
+      env: TEST=true ALLOW_FAILURE=true
+    - node_js: "0.6"
       env: TEST=true ALLOW_FAILURE=true
     - node_js: "0.4"
       env: TEST=true ALLOW_FAILURE=true
