--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
 
 	"rules": {
 		"complexity": [2, 19],
+		"func-names": 0,
 		"id-length": [2, { "min": 1, "max": 30 }],
 		"max-nested-callbacks": [2, 3],
 		"max-statements": [2, 33],
