--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
 		"test:implementation": "node test/index.js",
 		"coverage": "covert test/*.js",
 		"coverage:quiet": "covert test/*.js --quiet",
-		"lint": "npm run --silent jscs && npm run --silent eslint",
-		"eslint": "eslint *.js test/*.js",
-		"jscs": "jscs *.js test/*.js",
+		"lint": "eslint .",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
 		"prepublish": "npm run --silent build",
 		"preaudit": "npm install --package-lock --package-lock-only",
@@ -49,13 +47,12 @@
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.1.2",
-		"@ljharb/eslint-config": "^13.0.0",
+		"@ljharb/eslint-config": "^13.1.0",
 		"browserify": "^16.2.3",
 		"covert": "^1.1.0",
-		"eslint": "^5.9.0",
+		"eslint": "^5.11.1",
 		"for-each": "^0.3.3",
-		"is": "^3.2.1",
-		"jscs": "^3.0.7",
+		"is": "^3.3.0",
 		"tape": "^4.9.1"
 	},
 	"testling": {
