--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"covert": "^1.1.0",
 		"eslint": "^5.11.1",
 		"for-each": "^0.3.3",
+		"has": "^1.0.3",
 		"is": "^3.3.0",
 		"tape": "^4.9.1"
 	},
