--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 	"scripts": {
 		"pretest": "npm run --silent lint && es-shim-api",
 		"test": "npm run --silent tests-only",
-		"posttest": "npm run audit",
+		"posttest": "npx aud",
 		"tests-only": "npm run --silent test:implementation && npm run --silent test:shim",
 		"test:native": "node test/native.js",
 		"test:shim": "node test/shimmed.js",
@@ -17,10 +17,7 @@
 		"coverage:quiet": "covert test/*.js --quiet",
 		"lint": "eslint .",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
-		"prepublish": "npm run --silent build",
-		"preaudit": "npm install --package-lock --package-lock-only",
-		"audit": "npm audit",
-		"postaudit": "rm package-lock.json"
+		"prepublish": "npm run --silent build"
 	},
 	"repository": {
 		"type": "git",
