--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"covert": "^1.1.1",
 		"eslint": "^5.16.0",
 		"for-each": "^0.3.3",
+		"functions-have-names": "^1.1.0",
 		"has": "^1.0.3",
 		"is": "^3.3.0",
 		"tape": "^4.10.1"
