--- a/package.json
+++ b/package.json
@@ -14,10 +14,9 @@
 		"test:shim": "node test/shimmed.js",
 		"test:implementation": "node test/index.js",
 		"coverage": "covert test/*.js",
-		"coverage:quiet": "covert test/*.js --quiet",
 		"lint": "eslint .",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
-		"prepublish": "npm run --silent build"
+		"prepublish": "safe-publish-latest && npm run build"
 	},
 	"repository": {
 		"type": "git",
@@ -44,14 +43,15 @@
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.1.2",
-		"@ljharb/eslint-config": "^13.1.1",
-		"browserify": "^16.3.0",
+		"@ljharb/eslint-config": "^14.1.0",
+		"browserify": "^16.5.0",
 		"covert": "^1.1.1",
-		"eslint": "^5.16.0",
+		"eslint": "^6.4.0",
 		"for-each": "^0.3.3",
-		"functions-have-names": "^1.1.0",
+		"functions-have-names": "^1.1.1",
 		"has": "^1.0.3",
 		"is": "^3.3.0",
+		"safe-publish-latest": "^1.1.3",
 		"tape": "^4.11.0"
 	},
 	"testling": {
