--- a/package.json
+++ b/package.json
@@ -46,16 +46,16 @@
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.1.2",
-		"@ljharb/eslint-config": "^15.0.0",
+		"@ljharb/eslint-config": "^16.0.0",
 		"browserify": "^16.5.0",
 		"covert": "^1.1.1",
-		"eslint": "^6.6.0",
+		"eslint": "^6.8.0",
 		"for-each": "^0.3.3",
-		"functions-have-names": "^1.2.0",
+		"functions-have-names": "^1.2.1",
 		"has": "^1.0.3",
 		"is": "^3.3.0",
-		"safe-publish-latest": "^1.1.3",
-		"tape": "^4.11.0"
+		"safe-publish-latest": "^1.1.4",
+		"tape": "^5.0.0-next.4"
 	},
 	"testling": {
 		"files": "test/index.js",
