--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 	"scripts": {
 		"pretest": "npm run --silent lint && es-shim-api",
 		"test": "npm run --silent tests-only",
-		"posttest": "npx aud",
+		"posttest": "aud --production",
 		"tests-only": "npm run --silent test:implementation && npm run --silent test:shim",
 		"test:native": "node test/native.js",
 		"test:shim": "node test/shimmed.js",
@@ -46,16 +46,17 @@
 	},
 	"devDependencies": {
 		"@es-shims/api": "^2.1.2",
-		"@ljharb/eslint-config": "^16.0.0",
+		"@ljharb/eslint-config": "^17.1.0",
+		"aud": "^1.1.2",
 		"browserify": "^16.5.0",
 		"covert": "^1.1.1",
-		"eslint": "^6.8.0",
+		"eslint": "^7.6.0",
 		"for-each": "^0.3.3",
 		"functions-have-names": "^1.2.1",
 		"has": "^1.0.3",
 		"is": "^3.3.0",
 		"safe-publish-latest": "^1.1.4",
-		"tape": "^5.0.0-next.4"
+		"tape": "^5.0.1"
 	},
 	"testling": {
 		"files": "test/index.js",
