--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
 	],
 	"dependencies": {
 		"define-properties": "^1.1.3",
-		"function-bind": "^1.1.1",
+		"es-abstract": "^1.18.0-next.0",
 		"has-symbols": "^1.0.1",
 		"object-keys": "^1.1.1"
 	},
