--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,15 @@ import:
  - ljharb/travis-ci:node/pretest.yml
  - ljharb/travis-ci:node/posttest.yml
  - ljharb/travis-ci:node/coverage.yml
+script:
+   - 'if [ -n "${SES-}" ]; then npm run test:ses; fi'
 matrix:
   allow_failures:
     - env: COVERAGE=true
+  include:
+    - node_js: "14"
+      env: SES=true
+    - node_js: "13"
+      env: SES=true
+    - node_js: "12"
+      env: SES=true
