[Tests] gather coverage data on every job

--- a/package.json
+++ b/package.json
@@ -9,15 +9,14 @@
 	"license": "MIT",
 	"main": "index.js",
 	"scripts": {
-		"pretest": "npm run --silent lint && es-shim-api --bound",
-		"test": "npm run --silent tests-only && npm run test:ses",
+		"pretest": "npm run lint && es-shim-api --bound",
+		"test": "npm run tests-only && npm run test:ses",
 		"posttest": "aud --production",
-		"tests-only": "npm run --silent test:implementation && npm run --silent test:shim",
-		"test:native": "node test/native",
-		"test:shim": "node test/shimmed",
-		"test:implementation": "node test",
+		"tests-only": "npm run test:implementation && npm run test:shim",
+		"test:native": "nyc node test/native",
+		"test:shim": "nyc node test/shimmed",
+		"test:implementation": "nyc node test",
 		"test:ses": "node test/ses-compat",
-		"coverage": "covert test/*.js",
 		"lint": "eslint .",
 		"build": "mkdir -p dist && browserify browserShim.js > dist/browser.js",
 		"prepublish": "safe-publish-latest && npm run build"
@@ -50,12 +49,12 @@
 		"@ljharb/eslint-config": "^17.2.0",
 		"aud": "^1.1.2",
 		"browserify": "^16.5.2",
-		"covert": "^1.1.1",
 		"eslint": "^7.10.0",
 		"for-each": "^0.3.3",
 		"functions-have-names": "^1.2.1",
 		"has": "^1.0.3",
 		"is": "^3.3.0",
+		"nyc": "^10.3.2",
 		"safe-publish-latest": "^1.1.4",
 		"ses": "^0.10.4",
 		"tape": "^5.0.1"
