--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,13 @@ import:
  - ljharb/travis-ci:node/all.yml
  - ljharb/travis-ci:node/pretest.yml
  - ljharb/travis-ci:node/posttest.yml
- - ljharb/travis-ci:node/coverage.yml
 script:
    - 'if [ -n "${SES-}" ]; then npm run test:ses; fi'
 matrix:
-  allow_failures:
-    - env: COVERAGE=true
   include:
     - node_js: "14"
       env: SES=true
-    - node_js: "13"
-      env: SES=true
     - node_js: "12"
       env: SES=true
+after_success:
+ - 'if [ -f coverage/*.json ]; then bash <(curl -s https://codecov.io/bash) -f coverage/*.json; fi'
