--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
 		"shim"
 	],
 	"dependencies": {
+		"call-bind": "^1.0.0",
 		"define-properties": "^1.1.3",
-		"es-abstract": "^1.18.0-next.1",
 		"has-symbols": "^1.0.1",
 		"object-keys": "^1.1.1"
 	},
