--- a/.github/workflows/node-zero.yml
+++ b/.github/workflows/node-zero.yml
@@ -1,4 +1,4 @@
-name: 'Tests: node.js (io.js)'
+name: 'Tests: node.js (0.x)'
 
 on: [pull_request, push]
 
@@ -6,50 +6,50 @@ jobs:
   matrix:
     runs-on: ubuntu-latest
     outputs:
-      latest: ${{ steps.set-matrix.outputs.requireds }}
-      minors: ${{ steps.set-matrix.outputs.optionals }}
+      stable: ${{ steps.set-matrix.outputs.requireds }}
+      unstable: ${{ steps.set-matrix.outputs.optionals }}
     steps:
       - uses: ljharb/actions/node/matrix@main
         id: set-matrix
         with:
-          preset: 'iojs'
+          preset: '0.x'
 
-  latest:
+  stable:
     needs: [matrix]
-    name: 'latest minors'
+    name: 'stable minors'
     runs-on: ubuntu-latest
 
     strategy:
-      matrix: ${{ fromJson(needs.matrix.outputs.latest) }}
+      matrix: ${{ fromJson(needs.matrix.outputs.stable) }}
 
     steps:
       - uses: actions/checkout@v2
       - uses: ljharb/actions/node/run@main
-        name: 'npm install && npm run tests-only'
         with:
           node-version: ${{ matrix.node-version }}
           command: 'tests-only'
-  minors:
-    needs: [matrix, latest]
-    name: 'non-latest minors'
+          cache-node-modules-key: node_modules-${{ github.workflow }}-${{ github.action }}-${{ github.run_id }}
+  unstable:
+    needs: [matrix, stable]
+    name: 'unstable minors'
     continue-on-error: true
     if: ${{ !github.head_ref || !startsWith(github.head_ref, 'renovate') }}
     runs-on: ubuntu-latest
 
     strategy:
-      matrix: ${{ fromJson(needs.matrix.outputs.minors) }}
+      matrix: ${{ fromJson(needs.matrix.outputs.unstable) }}
 
     steps:
       - uses: actions/checkout@v2
       - uses: ljharb/actions/node/run@main
-        name: 'npm install && npm run tests-only'
         with:
           node-version: ${{ matrix.node-version }}
           command: 'tests-only'
+          cache-node-modules-key: node_modules-${{ github.workflow }}-${{ github.action }}-${{ github.run_id }}
 
   node:
-    name: 'io.js'
-    needs: [latest, minors]
+    name: 'node 0.x'
+    needs: [stable, unstable]
     runs-on: ubuntu-latest
     steps:
       - run: 'echo tests completed'
