--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
 	"ignorePatterns": ["dist/"],
 
 	"rules": {
+		"eqeqeq": [2, "allow-null"],
 		"id-length": [2, { "min": 1, "max": 30 }],
 		"max-statements": [2, 33],
 		"max-statements-per-line": [2, { "max": 2 }],
