--- a/package.json
+++ b/package.json
@@ -54,8 +54,8 @@
 		"eslint": "=8.8.0",
 		"for-each": "^0.3.3",
 		"functions-have-names": "^1.2.3",
-		"has": "^1.0.3",
 		"has-strict-mode": "^1.0.1",
+		"hasown": "^2.0.0",
 		"is": "^3.3.0",
 		"mock-property": "^1.0.3",
 		"npmignore": "^0.3.0",
