--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"call-bind": "^1.0.8",
 		"call-bound": "^1.0.3",
 		"define-properties": "^1.2.1",
+		"es-object-atoms": "^1.0.0",
 		"has-symbols": "^1.1.0",
 		"object-keys": "^1.1.1"
 	},
@@ -56,7 +57,6 @@
 		"functions-have-names": "^1.2.3",
 		"has-strict-mode": "^1.0.1",
 		"hasown": "^2.0.2",
-		"is": "^3.3.0",
 		"mock-property": "^1.1.0",
 		"npmignore": "^0.3.1",
 		"nyc": "^10.3.2",
